shalinee | TEST | inventory stock advance search alignment issue fixed

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -9610,7 +9610,7 @@ span#HW_badge_cont:nth-child(3) {
     white-space: normal !important;
     word-break: break-all;
     font-size: 24px;
-    top:55px !important;
+    top:56px !important;
 }
 /* responsive */
 ul.dropdown-menu.action-dropdown {
